test/tests/stages/18_structures/invalid_types/extra_credit/incomplete_unions/sizeof_incomplete_union_type.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: u
                  Bool: 1
                  List[0]: 
            CS: 
              CReturn: 
                CSizeOfT: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
